fix(FilterSidePanel/VerticalTabs): Adjust top and bottom spacing of filter-side-panel and vertical-t (#877)
.filter-panel-pf has top and bottom padding, which causes layout issues when it's the only item
being used.  Removing the top and bottom padding and adding a bottom margin fixes the bug and
provides the proper spacing if another element is used.  As a result of these changes,
.vertical-tabs-pf needs to have a larger bottom margin set on it.

--- a/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_filter-side-panel.scss
+++ b/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_filter-side-panel.scss
@@ -1,5 +1,6 @@
 .filter-panel-pf {
-  padding: 20px 15px;
+  margin: 0 0 30px;
+  padding: 0 15px;
 }
 
 .filter-panel-pf-category {
